test-data/error/no-lgagst-action.hltas
version 1
frames
---l------|------|------|0.001|-|-|1
